# protobuf_demo_windows

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  build.sh  generate_proto.sh  install_vs2015.sh  protoc.bat
assets/protobuf-3.6.1/: build.sh
assets/protobuf-3.6.1/install/cmake/: protobuf-targets-release.cmake  protobuf-targets.cmake
include/: addressbook.pb.cc  addressbook.pb.h  contact.pb.cc  contact.pb.h  face.pb.h  item.pb.h  person.pb.cc  person.pb.h  phonebook.pb.cc  phonebook.pb.h
protos/: addressbook.proto  contact.proto  face.proto  item.pb.cc  item.pb.h  item.proto  phonebook.proto
src/: addressbook.cpp  item.cpp  phonebook.cpp
src/demo/: addressbook.pb.cc  contact.cpp  contact.pb.cc  face.pb.cc  item.pb.cc  person.cpp  person.pb.cc  phonebook.pb.cc
